# action-context

./: Dockerfile  README.md  action.py  action.yml  pyproject.toml  requirements.txt
action_context/providers/: github.py  project.py  python.py  versioning.py
