[tool.poetry]
name = "action-context"
version = "0.1.0"
description = ""
authors = ["Michal Przytulski <michal@przytulski.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
actions-toolkit = "^0.1.13"
click = "^8.0.4"
toml = "^0.10.2"
PyGithub = "^1.55"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
